--- a/style.css
+++ b/style.css
@@ -59,9 +59,10 @@ main {
 
 .grid-productos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 20px; 
 }
+
 
 .producto {
   border: 1px solid #ddd;
